Fix drop-down input not stretching the width of the drop-down component

--- a/src/style/components/dropdown.scss
+++ b/src/style/components/dropdown.scss
@@ -10,3 +10,7 @@
     transform: rotate(180deg);
   }
 }
+
+.s-drop-down__input {
+  width: 100%;
+}
